objects/vlocity_cmt__PricingPlan__c.object
<CustomObject>
    <description>A Vlocity Pricing Plan is a definition of the sequenced pricing logic to be run by Vlocity CPQ when the PricingPlanService implementation is chosen. To activate a given Pricing Plan as the default to use at runtime, edit the DefaultPricingPlan entry in the CPQ Configuration Setup custom setting and set the value to the code of the pricing plan you want to run. For example, setting DefaultPricingPlan = DEFAULT_PRICING_PLAN chooses the out of the box pricing plan.</description>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountOfActivePricingPlanSteps__c</fullName>
        <description>Count of active pricing plan steps.</description>
        <label># of Steps</label>
        <summaryFilterItems>
            <field>vlocity_cmt__PricingPlanStep__c.vlocity_cmt__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__PricingPlanStep__c.vlocity_cmt__PricingPlanId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Pricing Plan</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__Vlocity_EPC_Pricing_Plan_List</fullName>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Code__c</columns>
        <columns>vlocity_cmt__CountOfActivePricingPlanSteps__c</columns>
        <columns>vlocity_cmt__EffectiveFromDate__c</columns>
        <columns>vlocity_cmt__EffectiveUntilDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Vlocity EPC Pricing Plan List</label>
    </listViews>
    <nameField>
        <label>Pricing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>